--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </header>
     <main>
         <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section.</p>
+            <h2>Server Address</h2>
+            <p>approximasteranarchy2004.falixsrv.me. Anarchy: 20517, VIAaaS: 53587</p>
         </section>
         <section id="about">
             <h2>About</h2>
