--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section id="about">
             <h2>About</h2>
-            <p>We are International Anarchy Server. We Are International Plugin Anarchist Team, We Are Approximaster. at 2021, many players of 2b2t.be hated me so 2022, i started my own server and ownership of mine. the team members from korea, japan, and america. Korean Team Members are 2 people and Japan Team Members are the half and americans are other half. Recruiting Members! Join Our Clan to Wreck Other Server through VIAaaS!</p>
+            <p>We are International Anarchy Server. We Are International Plugin Anarchist Team, We Are Approximaster. at 2021, many players of 2b2t.be hated me so 2022, i started my own server and ownership of mine. the team members from korea, japan, and america. Korean Team Members are 2 people and Japan Team Members are the half and americans are other half. Recruiting Members! Join Our Clan to Wreck Other Server and their clan through VIAaaS!</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
