--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <main>
         <section id="home">
             <h2>Server Address</h2>
-            <p>approximasteranarchy2004.falixsrv.me. Anarchy: 20517, VIAaaS: 53587</p>
+            <p>approximasteranarchy2004.falixsrv.me:20517, Minimum Version is 1.7 and maximum version is 1.21(.1). if you want to join with old version Use the ViaProxyConnect to connect. ViaProxyConnect Address: approximasteranarchy2004.falixsrv.me_20517_1.7.viaproxy.raphimc.net:25565(No Longer Used). .</p>
         </section>
         <section id="about">
             <h2>About</h2>
-            <p>We are International Anarchy Server. We Are International Plugin Anarchist Team, We Are Approximaster. at 2021, many players of 2b2t.be hated me so 2022, i started my own server and ownership of mine. the team members from korea, japan, and america. Korean Team Members are 2 people and Japan Team Members are the half and americans are other half. Recruiting Members! Join Our Clan to Wreck Other Server and their clan through VIAaaS!</p>
+            <p>We are International Anarchy Server. We Are International Plugin Anarchist Team, We Are Approximaster. at 2021, many players of 2b2t.be hated me so 2022, i started my own server and ownership of mine. the team members from korea, japan, and america. Korean Team Members are 2 people and Japan Team Members are the half and americans are other half. Recruiting Members! Join Our Clan to Wreck Other Server and their clan through VIAaaS + ViaProxy</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
