--- a/download.html
+++ b/download.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My Page</h1>
     <p>This is a sample HTML page.</p>
-    <a href="Oraxen" download="oraxen.bat">Oraxen(PAID) - You Must Use Compiler</a>
+    <a href="Oraxen" download="oraxen.bat">Oraxen(PAID) - You Must Use Compiler, the paid plugin must be published as open source and should provide a compiler.</a>
 </body>
 </html>
