--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section id="home">
             <h2>Server Address</h2>
-            <p>approximasteranarchy2004.falixsrv.me:20517, Minimum Version is 1.7 and maximum version is 1.21(.1). if you want to join with old version Use the ViaProxyConnect to connect. ViaProxyConnect Address: approximasteranarchy2004.falixsrv.me_20517_1.7.viaproxy.raphimc.net:25565(No Longer Used). .</p>
+            <p>approximasteranarchy2004.falixsrv.me:20517, Minimum Version is 1.7 and maximum version is 1.21(.1). if you want to join with old version Use the ViaProxyConnect Revived: approximasteranarchy2004.falixsrv.me_20517_1.7.viaproxy.0000-0000-0000-0000-0000-ffff-144.76.8.18.sslip.io:53587.</p>
         </section>
         <section id="about">
             <h2>About</h2>
