--- a/viaproxy.html
+++ b/viaproxy.html
@@ -81,7 +81,7 @@
             const port = document.getElementById('port').value;
             const version = document.getElementById('version').value;
             const hostname = document.getElementById('hostname').value;
-            const hostname = document.getElementById('vport').value;
+            const vport = document.getElementById('vport').value;
             const result = `${address}_${port}_${version}.viaproxy.${hostname}:${vport}`;
             document.getElementById('result').innerText = result;
         }
