--- a/dev.html
+++ b/dev.html
@@ -33,7 +33,7 @@
     <div class="window">
         <div class="title-bar">My Window</div>
         <div class="content">
-            <p>Welcome to Windows 93!</p>
+            <p>Welcome to ApproximasterOS 1.0!</p>
         </div>
     </div>
     <script>
